# Proyecto1DatosII

./: README.md
Proyecto_1/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
Proyecto_1/Client/: Client.cpp  Client.h
Proyecto_1/GUI/: codeeditor.cpp  highlighter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Proyecto_1/Parse/: Parser.cpp  Parser.h  Tokens.cpp  Tokens.h
Proyecto_1/Parser/: Parser.cpp  Parser.h  tokens.cpp  tokens.h
Proyecto_1/server/: CMakeLists.txt  linkedlist.cpp  linkedlist.h  main.cpp  mserver.cpp  mserver.h  node.cpp  node.h
ide/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
